# Agent-S-Like-Look-IA

./: .gitignore  README.md  index.html  package-lock.json  pyproject.toml  vercel.json
gui_agents/s2/agents/: agent_s.py  manager.py  worker.py
gui_agents/s2/core/: engine.py  knowledge.py
kb_s2/windows/: formulate_query.json
