[tool.poetry]
name = "gui-agents"
version = "0.2.5"
description = "A library for creating general purpose GUI agents using multimodal LLMs."
authors = ["Desembargador Julio Campos Machado <juliocamposmachado@gmail.com>"]
license = "MIT"
readme = "README.md"
python = ">=3.10,<3.14"
packages = [{ include = "gui_agents" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyautogui = ">=0.9.54,<0.10.0"
openai = ">=1.82.1,<2.0.0"
requests = ">=2.32.3,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
tk = ">=0.1.0,<0.2.0"
SpeechRecognition = ">=3.14.3,<4.0.0"
pyttsx3 = ">=2.98,<3.0"
opencv-python = ">=4.11.0.86,<5.0.0.0"
fastapi = ">=0.115.12,<0.116.0"
backoff = ">=2.2.1,<3.0.0"
anthropic = ">=0.52.1,<0.53.0"

[tool.poetry.scripts]
agent_s2 = "gui_agents.s2.cli_app:main"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.34.2"}
python = ">=3.10,<3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
